--- a/src/window.ui
+++ b/src/window.ui
@@ -7,16 +7,39 @@
     <property name="default-width">600</property>
     <property name="default-height">300</property>
     <child>
-      <object class="GtkDrawingArea" id="drawArea">
+      <object class="GtkBox" id="dieBox">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <object class="GtkDrawingArea" id="drawArea">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkTextView" id="anZeige">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
       </object>
     </child>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="header_bar">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="title">Hello, World!</property>
+        <property name="title">Saluton Mondo!</property>
         <property name="show-close-button">True</property>
       </object>
     </child>
