--- a/src/window.ui
+++ b/src/window.ui
@@ -4,8 +4,8 @@
   <requires lib="gtk+" version="3.24"/>
   <template class="OriginalWindow" parent="GtkApplicationWindow">
     <property name="can-focus">False</property>
-    <property name="default-width">500</property>
-    <property name="default-height">500</property>
+    <property name="default-width">600</property>
+    <property name="default-height">600</property>
     <child>
       <object class="GtkBox" id="dieBox">
         <property name="visible">True</property>
@@ -39,7 +39,7 @@
       <object class="GtkHeaderBar" id="header_bar">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="title">Saluton Mondo!</property>
+        <property name="title">serpento</property>
         <property name="show-close-button">True</property>
         <child>
           <object class="GtkBox">
@@ -70,4 +70,20 @@
           </object>
         </child>
   </template>
+  <object class="GtkPopover" id="messageWidget">
+    <property name="width-request">320</property>
+    <property name="can-focus">False</property>
+    <property name="relative-to">header_bar</property>
+    <property name="position">bottom</property>
+    <child>
+      <object class="GtkLabel" id="messageLabel">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="justify">center</property>
+        <attributes>
+          <attribute name="scale" value="1.5"/>
+        </attributes>
+      </object>
+    </child>
+  </object>
 </interface>
