--- a/src/window.ui
+++ b/src/window.ui
@@ -23,9 +23,32 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="anZeige">
+          <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can-focus">True</property>
+            <property name="can-focus">False</property>
+            <child>
+              <object class="GtkLabel" id="anZeige">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="nivelo">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="pack-type">end</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -61,14 +84,16 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="pack-type">end</property>
                 <property name="position">1</property>
               </packing>
-              </child>
-             </object>
             </child>
           </object>
         </child>
+      </object>
+    </child>
   </template>
   <object class="GtkPopover" id="messageWidget">
     <property name="width-request">320</property>
